k3s/manifests/nodejsapp-service-ci.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp-service-ci
  labels:
    service: nodejsapp-srv
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app:  nodejsapp
