k3s/manifests/nodejsapp-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp-service
spec:
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 32222
  selector:
    app: nodejsapp
  type: NodePort
