k3s/manifests/nodejsapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejsapp-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - host: nodeapp.abbaye11.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejsapp-service-ci
            port: 
              number: 8080
